--- a/app/src/main/res/layout/activity_seat_selection.xml
+++ b/app/src/main/res/layout/activity_seat_selection.xml
@@ -7,23 +7,23 @@
     tools:context="no.usn.grupp1.arrangementapp.SeatSelectionActivity"
 
     >
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/sceneBilde"
 
-    />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sceneBilde"/>
 
-<GridView
-    android:id="@+id/gridview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnWidth="100dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-    android:numColumns="5"
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:layout_below="@+id/sceneBilde"
+        android:columnWidth="100dp"
+        android:gravity="center"
+        android:numColumns="5"
+        android:stretchMode="columnWidth"></GridView>
 
-    >
-</GridView>
 
 </RelativeLayout>
