--- a/app/src/main/res/layout/activity_seat_selection.xml
+++ b/app/src/main/res/layout/activity_seat_selection.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="no.usn.grupp1.arrangementapp.SeatSelectionActivity"
-
     >
 
     <ImageView
@@ -24,6 +23,25 @@
         android:gravity="center"
         android:numColumns="5"
         android:stretchMode="columnWidth"></GridView>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/ticketCancelButton"
+        android:text="Cancel"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/ticketReserverButton"
+        android:text="Reserver Billett"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        />
+
 
 
 </RelativeLayout>
