--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,24 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="no.usn.grupp1.arrangementapp.UserProfileActivity">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp" >
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/userName"
-        android:textSize="14dp"
-        android:padding="10dp"
-        android:text="test"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/user"
+        android:text="Brukerinfo:"
+        android:padding="6dp"
+        android:textSize="25sp"
+        style="@style/TextAppearance.AppCompat.Headline"
+        />
+
+    <GridLayout
+        android:id="@+id/gridUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/user"
+        android:columnCount="2"
+        android:layout_alignParentLeft="true">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Navn: "
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/getName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="aeg"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Email: "
+            android:textSize="14sp"
+
+            />
+
+        <TextView
+            android:id="@+id/getUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="aeg"
+            android:textSize="14sp" />
+
+    </GridLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/billettRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/billettReceipt"
+        android:scrollbars="vertical"
+        android:layout_alignParentLeft="true" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/userEmail"
-        android:textSize="14dp"
-        android:padding="10dp"/>
+        android:id="@+id/billettReceipt"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/gridUser"
+        android:padding="6dp"
+        android:text="Billetter:"
+        android:textSize="25sp"
+        android:layout_alignParentLeft="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/billettDeleteTip"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gridUser"
+        android:padding="6dp"
+        android:text="Swipe for å slette billett"
+        android:textSize="12sp"
+        android:textColor="#ff0000"
+        android:gravity="center_vertical"
+        android:layout_toRightOf="@+id/billettReceipt"
+        android:layout_alignBottom="@id/billettReceipt"
+        />
+</RelativeLayout>
